<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Send To Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_lowercase">vehicle</string>
    <string name="makes">Makes</string>
    <string name="account">Account</string>
    <string name="address">Address</string>
    <string name="destination">Destination</string>
    <string name="destinationName">Name</string>
    <string name="notes">Notes</string>
    <string name="optional">Optional</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="loadingAddress">Loading address</string>
    <string name="errorDownload">Could not download address. Check your internet connection and try again</string>
    <string name="errorNotGoogleMaps">The shared link was not a valid Google Maps link</string>
    <string name="errorNoUrl">There was no valid URL in the shared link</string>
    <string name="errorGoogleMapsLongPressBug">Due to a bug in the new version of Google Maps, a blank address was just shared from Google Maps to the Send To Car app.\n\nYou can work around this bug by searching for an address in the Google Maps app using the search bar instead of long-pressing on the map.\n\nPlease write to Google that this bug affects you.\n\nOpen the Google Maps app, pull open the panel to the left and click Send feedback.\n\nWrite something like: \"When long-pressing on the map then pressing the Share button, the shared Google Maps link doesn\'t point to any location.\"\n\nSorry for the inconvenience.\n\n- Julien Vanier</string>
    <string name="errorGoogleMapsIncompleteAddressBug">Due to a bug in the new version of Google Maps, an incomplete address was just shared from Google Maps to the Send To Car app. It contains the street address, but not the city, state and country so Send To Car cannot find your destination.\n\nYou can sometimes work around this bug by searching for a street, city and state in the Google Maps app using the search bar. You can also search for a business near your destination.\n\nPlease write to Google that this bug affects you.\n\nOpen the Google Maps app, pull open the panel to the left and click Send feedback.\n\nWrite something like: \"When searching for a street address then pressing the Share button, the new Google Maps shares an incomplete address without city and state.\"\n\nSorry for the inconvenience.\n\n- Julien Vanier</string>
    <string name="errorGeocoding">The address you typed was not found</string>
    <string name="errorConnectToFord">Could not connect to Ford Sync server. This is a temporary problem. Please try again later.</string>
    <string name="noInternet">No internet connection</string>
    <string name="noInternetSendingDestination">Could not send the destination because your device is not connected to the internet.</string>
    <string name="noInternetLoadingAddress">Could not load the address because your device is not connected to the internet.</string>
    <string name="debugMode" translatable="false">Debug mode</string>
    <string name="debugOn" translatable="false">Debug messages turned on.</string>
    <string name="debugOff" translatable="false">Debug messages turned off.</string>
    <string name="errorIntent">App not started from the Google Maps share menu. See tutorial for details.</string>
    <string name="errorTitle">Error</string>
    <string name="ok">OK</string>
    <string name="showHelp">Show help</string>
    <string name="chooseMake">Choose a make</string>
    <string name="chooseVehicle">Choose a vehicle</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="screenshot">Screenshot</string>
    <string name="sendingToCar">Sending to car</string>
    <string name="errorSendToCar">Could not send the destination.\n\nTry again later</string>
    <string name="updateBMWAssist">Could not send the destination.\n\nYou might be able to fix this by updating BMW Assist in your car.\n\nClick on Show help and follow the instructions provided.</string>
    <string name="successCar">Destination successfully sent to car</string>
    <string name="successTitle">Success</string>
    <string name="fordDownload">In your car, press \"Sync\" and say \"Services\" to download the destination</string>
    <string name="dontShowAgain">Don\'t show again</string>
    <string name="redirect">Follow the instructions on this page to finish sending your destination</string>
    <string name="statusInvalidAccount">Invalid account.\n\nCheck that you entered it correctly and try again.</string>
    <string name="statusDestinationNotSent">This destination cannot be sent to your car.\n\nTry a different destination.</string>
    <string name="helpForVehicle">Help for {0}</string>
    <string name="knownIssueForVehicle">Known issue for {0}</string>
    <string name="recentVehicles">Recent vehicles</string>
    <string name="cantFindYourMake">Can\'t find your make?</string>
    <string name="showingMakesForCounty">Showing makes for {0}</string>
    <string name="changeCountry">Change country</string>
    <string name="seeWhyYourMakeIsMissing">See why your make is missing</string>
    <string name="selectCountry">Select country</string>
    <string name="discard">Discard</string>
    <string name="errorNoApp">No app is available to do this</string>
    <string name="listTutorialTitle">Show tutorial</string>
    <string name="listHelpTitle">Show more help</string>
    <string name="listRateTitle">Rate app</string>
    <string name="listEmailTitle">Contact developer</string>
    <string name="listSendLog">Send debug log</string>
    <string name="infoHowTo">How to Use</string>
    <string name="infoWelcome">Welcome to Send To Car, a quick way to send destinations to your navigation system, even when you are not in your car!</string>
    <string name="infoStart">First, start Google Maps, find a place and slide up the box at the bottom</string>
    <string name="infoShare">Select Share from the 3-dots menu or tap the Share button</string>
    <string name="infoSend">Select Send To Car</string>
    <string name="infoEnter">Select your vehicle make, enter your account and hit Send</string>
    <string name="infoHelp">The account could be your email, user name, VIN or phone number.\n<small>See the help for more info.</small></string>
    <string name="infoManual">You can also type in an address manually instead of using Google Maps.</string>
    <string name="infoRetrieve">When you get in your car, download the destination and go!\n<small>This step is different for every make.\nSee the help.</small></string>
</resources>
